# api_electrolux

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
api_electrolux/: main.py
api_electrolux/routers/: auth.py  electrolux.py  home.py
api_electrolux/schemas/: schema_auth.py  schema_electrolux.py
common/db/: db.py
common/db/sql/: electrolux.sql  filiais.sql  valida_client.sql
common/security/: security.py
common/settings/: settings.py
utils/: __init__.py  encode_decode.py  ler_arquivo.py
